# MORPH

./: .env.example  .gitignore  environment.yml  pyproject.toml  scratch.ipynb
analysis/active_learning/src/: data.py  evaluate.py  run.py
analysis/cell_line_transfer/: cell_line_transfer_ctrl_finetune.py  cell_line_transfer_few_shot_learning.py
configs/: transfer_default.yaml
data/: norman_k562_essential_splits.csv  norman_k562_hvg_splits.csv  perturb_embed_file_path.csv  replogie_RPE1_essential_splits.csv  scdata_file_path.csv
data/hvg_cache/: k562_essential_raw_n5000.pkl  rpe1_essential_raw_n5000.pkl
demo/: data_tutorial_transfer_learning.ipynb
morph/: config.py  dataset.py  evaluate.py  inference.py  predict_morph.py  run.py  run.sh  run_transfer.py  train.py  utils.py
morph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
transfer_learning/: hvg_gene_list.pkl
